<?xml version="1.0"?>
<package  format="3">
  <name>hesai_ros_driver</name>
  <version>1.5.0</version>
  <description>The hesai_ros_driver_node package</description>
  <maintainer email="zhangyu@hesaitech.com">hesaiwuxiaozhou</maintainer>
  <license>BSD</license>
  
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>
  <build_depend condition="$ROS_VERSION == 2">rclcpp</build_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend condition="$ROS_VERSION == 2">rclcpp</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">sensor_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">std_msgs</exec_depend>
  <depend condition="$ROS_VERSION == 2">ament_index_cpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_action</depend>

  <exec_depend condition="$ROS_VERSION == 1">roscpp</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">sensor_msgs</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">roslib</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
  
</package>




